--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,82 +1,86 @@
 <footer class="footer">
-    <div class="container-footer">
-      <div class="row-top">
-        <div class="logo">
-          <img src="/assets/square-logo.png" alt="" />
+  <div class="container-footer">
+    <div class="row-top">
+      <div class="logo">
+        <img src="/assets/square-logo.png" alt="" />
+      </div>
+      <div class="buttons">
+        <!-- <a href="#" class="btn btn-primary">Get Started</a> -->
+        <a href="#" class="btn btn-secondary">Back to 🔝</a>
+      </div>
+    </div>
+    <div class="row-mid">
+      <div class="newsleters">
+        <div class="title-f">
+          <h4>Subscribe Newsletters</h4>
         </div>
-        <div class="buttons">
-          <!-- <a href="#" class="btn btn-primary">Get Started</a> -->
-          <a href="#" class="btn btn-secondary">Back to 🔝</a>
+        <div class="form-group-f">
+          <form>
+            <input type="text" placeholder="Enter your email" />
+            <button type="submit">Sign Up</button>
+          </form>
         </div>
       </div>
-      <div class="row-mid">
-        <div class="newsleters">
-          <div class="title-f">
-            <h4>Subscribe Newsletters</h4>
-          </div>
-          <div class="form-group-f">
-            <form>
-              <input type="text" placeholder="Enter your email" />
-              <button type="submit">Sign Up</button>
-            </form>
-          </div>
-        </div>
-        <div class="links">
-          <div class="quick-link">
-            <h3>Quick Links</h3>
-            <ul>
-              <li><a href="#">Brouchers</a></li>
-              <li><a href="/forRecruiters">For Recruiter</a></li>
-              <li><a href="/visitors">Companies</a></li>
-              <li><a href="/contact">Contact</a></li>
-            </ul>
-          </div>
-          <div class="institute-links">
-            <h3>From Institute</h3>
-            <ul>
-              <li><a href="/gallery">Placement Gallery</a></li>
-              <li><a href="/contact">People</a></li>
-              <li><a href="/institute">Courses</a></li>
-              <li><a href="/loginPage">Profiles</a></li>
-            </ul>
-          </div>
-          <div class="help-links">
-            <h3>Help</h3>
-            <ul>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Terms & Conditions</a></li>
-              <li><a href="">Sitemap</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="row-bottom">
-        <div class="copyright">
-          <p>Copyright &copy; 2022-23. All Rights Reserved.</p>
-        </div>
-        <div class="social-links">
+      <div class="links">
+        <div class="quick-link">
+          <h3>Quick Links</h3>
           <ul>
             <li>
-              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="https://tnp.iiitbh.ac.in/assets/Brochure2023-24.pdf"
+                >Brouchers</a
+              >
             </li>
-            <li>
-              <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa-brands fa-youtube"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa-brands fa-pinterest"></i></a>
-            </li>
+            <li><a href="/forRecruiters">For Recruiter</a></li>
+            <li><a href="/visitors">Companies</a></li>
+            <li><a href="/contact">Contact</a></li>
+          </ul>
+        </div>
+        <div class="institute-links">
+          <h3>From Institute</h3>
+          <ul>
+            <li><a href="/gallery">Placement Gallery</a></li>
+            <li><a href="/contact">People</a></li>
+            <li><a href="/institute">Courses</a></li>
+            <li><a href="/loginPage">Profiles</a></li>
+          </ul>
+        </div>
+        <div class="help-links">
+          <h3>Help</h3>
+          <ul>
+            <li><a href="/faq">FAQ</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Sitemap</a></li>
           </ul>
         </div>
       </div>
-      <div class="credits">
-        <p>Designed and Developed by Prem Kumar & Prateek Chandra</p>
+    </div>
+    <div class="row-bottom">
+      <div class="copyright">
+        <p>Copyright &copy; 2022-23. All Rights Reserved.</p>
+      </div>
+      <div class="social-links">
+        <ul>
+          <li>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+          </li>
+        </ul>
       </div>
     </div>
-  </footer>
+    <div class="credits">
+      <p>Designed and Developed by Prem Kumar & Prateek Chandra</p>
+    </div>
+  </div>
+</footer>
