Eligible Batched Error Corrected

--- a/views/jaf.ejs
+++ b/views/jaf.ejs
@@ -402,11 +402,11 @@
                     </h3>
                     <fieldset id="nation">
                       <div class="checkbox">
-                        <input type="checkbox" name="eligibility" value="B26" />
+                        <input type="checkbox" name="eligibility" value="B23" />
                         <label for="B23">B.Tech 2023</label>
                       </div>
                       <div class="checkbox">
-                        <input type="checkbox" name="eligibility" value="B26" />
+                        <input type="checkbox" name="eligibility" value="M23" />
                         <label for="M23">M.Tech 2023</label>
                       </div>
                       <div class="checkbox">
