--- a/views/admin-panel.ejs
+++ b/views/admin-panel.ejs
@@ -74,6 +74,7 @@
     <meta name="og:postal-code" content="813210" />
     <meta name="og:country-name" content="INDIA" />
     <title></title>
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/fevicon.svg" />
 
     <link rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css" />
     <link rel="stylesheet" href="/css/main.css" />
@@ -273,7 +274,7 @@
             <a id="b-btn">Go Back</a>
           </div>
           <div class="institute-logo">
-            <img src="/assets\Screenshot 2022-04-10 235928.png" alt="" />
+            <img src="/assets/tnp-logo.svg" alt="logo" />
           </div>
         </div>
         <div class="mid-div">
