--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -66,25 +66,19 @@
           <div class="menu-item">
             <a href="https://iiitbh.pod.ai/">Placement portal</a>
           </div>
-          <!-- <div class="menu-item" onclick="window.open('/profile','_target');">
+          <div class="menu-item" onclick="window.open('/profile','_target');">
             Student Profile
-          </div> -->
-          <div
-            class="menu-item"
-            onclick="window.open('/admin','_target');"
-          >
+          </div>
+          <div class="menu-item" onclick="window.open('/admin','_target');">
             Admin Center
           </div>
           <div class="menu-item">Help</div>
         </div>
         <div class="pcnav">
-          <!-- <div class="menu-item" onclick="window.open('/profile','_target');">
+          <div class="menu-item" onclick="window.open('/profile','_target');">
             Student Profile
-          </div> -->
-          <div
-            class="menu-item"
-            onclick="window.open('/admin','_target');"
-          >
+          </div>
+          <div class="menu-item" onclick="window.open('/admin','_target');">
             Admin Center
           </div>
           <div class="menu-item">Help</div>
