--- a/public/css/page-css/public-page.css
+++ b/public/css/page-css/public-page.css
@@ -73,6 +73,12 @@ img {
   margin-bottom: 30px;
 }
 
+.center-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .profile-img img {
   width: 100%;
   height: 100%;
@@ -132,6 +138,7 @@ img {
   display: flex;
   flex-direction: column;
   margin-left: 20%;
+  padding: 10px;
   align-items: left;
   font-family: "Arial";
   color: #434343;
@@ -151,6 +158,12 @@ img {
 
 .social-bar i {
   font-size: 20px;
+  margin-bottom: 5px;
+  font-weight: 400;
+}
+
+.social-bar a {
+  font-size: 16px;
   margin-bottom: 5px;
   font-weight: 400;
 }
@@ -185,8 +198,8 @@ img {
   align-items: center;
   font-family: "Arial";
   text-align: center;
-  border-radius: 20px;
   cursor: pointer;
+  border-radius: 20px;
   box-shadow: 2px 0px 20px 10px rgba(203, 200, 200, 0.25);
 }
 
@@ -227,7 +240,7 @@ img {
 .bottom-div {
   display: block;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   margin-bottom: 20px;
   margin: auto;
 }
@@ -240,11 +253,11 @@ img {
 
 .resume iframe {
   overflow: hidden;
-  height: 1000px;
+  height: 100vh;
   width: 100%;
   box-decoration-break: initial;
   scroll-behavior: smooth;
-  border-radius: 20px;
+  border-radius: 5px;
   color: #fff;
   background: #7e7e7e;
 }
@@ -295,12 +308,20 @@ img {
 
   .back-button {
     margin-left: 5%;
+    width: 25%;
+  }
+
+  .back-button a {
+    font-size: 12px;
   }
   .profile,
   .contact-info,
   .social-bar {
-    align-items: center;
     margin: 0 0;
+  }
+
+  .resume iframe {
+    height: 60vh;
   }
 }
 
