--- a/views/public-page.ejs
+++ b/views/public-page.ejs
@@ -162,6 +162,9 @@
             </div>
           </div>
           <div class="bottom-div">
+            <div class="download-resume back-button">
+              <a href="" id="view-resume">View Resume</a>
+            </div>
             <div class="resume">
               <!-- attach resume preview here -->
               <!-- <iframe
