--- a/views/contact-page.ejs
+++ b/views/contact-page.ejs
@@ -116,52 +116,52 @@
           <h3>Dr. Gaurav Kumar</h3>
           <p>(Faculty In-charge TPC)</p>
         </div>
-        <div class="container-c">
-          <div class="row-up">
-            <div class="heading-c">
-              <h1>Placement Faculty Incharge and TPO</h1>
-              <div class="line-style">
-                <img src="/assets\Vector 8.svg" alt="line image" />
-              </div>
+      </div>
+      <div class="container-c">
+        <div class="row-up">
+          <div class="heading-c">
+            <h1>Placement Faculty Incharge and TPO</h1>
+            <div class="line-style">
+              <img src="/assets\Vector 8.svg" alt="line image" />
             </div>
           </div>
-          <div class="row-mid_c">
-            <div class="contact-cards">
-              <div class="contact-card">
-                <div class="card-img">
-                  <img src="/assets\Gaurav.jpg" alt="card image" />
-                </div>
-                <div class="card-content">
-                  <h3>Dr. Gaurav Kumar</h3>
-                  <p>(Faculty Incharge, Training & Placement Cell)</p>
-                  <h4>
-                    <i class="fa-solid fa-phone" aria-hidden="true"></i
-                    ><a href="tel:+917484055317"> +91-74840-55317</a>
-                  </h4>
-                  <h4>
-                    <i class="fa-solid fa-envelope" aria-hidden="true"></i
-                    ><a href="mailto: tnp_fic@iiitbh.ac.in">
-                      tnp_fic@iiitbh.ac.in</a
-                    >
-                  </h4>
-                </div>
+        </div>
+        <div class="row-mid_c">
+          <div class="contact-cards">
+            <div class="contact-card">
+              <div class="card-img">
+                <img src="/assets\Gaurav.jpg" alt="card image" />
               </div>
-              <div class="contact-card">
-                <div class="card-img">
-                  <img src="/assets\Sangeeta_sharma.jpg" alt="card image" />
-                </div>
-                <div class="card-content">
-                  <h3>Sangeeta Sharma</h3>
-                  <p>(Training and Placement Officer)</p>
-                  <h4>
-                    <i class="fa-solid fa-phone" aria-hidden="true"></i
-                    ><a href="tel:+918962541634"> +91-8962541634</a>
-                  </h4>
-                  <h4>
-                    <i class="fa-solid fa-envelope" aria-hidden="true"></i
-                    ><a href="mailto:tpo@iiitbh.ac.in"> tpo@iiitbh.ac.in</a>
-                  </h4>
-                </div>
+              <div class="card-content">
+                <h3>Dr. Gaurav Kumar</h3>
+                <p>(Faculty Incharge, Training & Placement Cell)</p>
+                <h4>
+                  <i class="fa-solid fa-phone" aria-hidden="true"></i
+                  ><a href="tel:+917484055317"> +91-74840-55317</a>
+                </h4>
+                <h4>
+                  <i class="fa-solid fa-envelope" aria-hidden="true"></i
+                  ><a href="mailto: tnp_fic@iiitbh.ac.in">
+                    tnp_fic@iiitbh.ac.in</a
+                  >
+                </h4>
+              </div>
+            </div>
+            <div class="contact-card">
+              <div class="card-img">
+                <img src="/assets\Sourav_Biswas.jpg" alt="card image" />
+              </div>
+              <div class="card-content">
+                <h3>Sourav Biswas</h3>
+                <p>(Training and Placement Officer)</p>
+                <h4>
+                  <i class="fa-solid fa-phone" aria-hidden="true"></i
+                  ><a href="tel:+919903326156"> +91-9903326156</a>
+                </h4>
+                <h4>
+                  <i class="fa-solid fa-envelope" aria-hidden="true"></i
+                  ><a href="mailto:tpo@iiitbh.ac.in"> tpo@iiitbh.ac.in</a>
+                </h4>
               </div>
             </div>
           </div>
