--- a/views/for-recruiters.ejs
+++ b/views/for-recruiters.ejs
@@ -273,14 +273,14 @@
               </div>
               <div class="contact-card">
                 <div class="card-img">
-                  <img src="/assets\Sangeeta_sharma.jpg" alt="card image" />
+                  <img src="/assets/Sourav_Biswas.jpg" alt="card image" />
                 </div>
                 <div class="card-content">
-                  <h3>Sangeeta Sharma</h3>
+                  <h3>Sourav Biswas</h3>
                   <p>(Training and Placement Officer)</p>
                   <h4>
                     <i class="fa-solid fa-phone" aria-hidden="true"></i>
-                    +91-8962541634
+                    +91-9903326156
                   </h4>
                   <h4>
                     <i class="fa-solid fa-envelope" aria-hidden="true"></i>
