--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <div
     class="nav-logo"
-    onclick="window.location.href='https://www.iiitbh.ac.in/';"
+    onclick="window.location.href='https\:\/\/www.iiitbh.ac.in\/';"
   >
     <img src="/assets/new-logo.png" alt="college" />
   </div>
@@ -43,7 +43,10 @@
       </div>
     </div>
     <div class="nav-item">
-      <a href="https://iiitbh.pod.ai/" target="_blank">Placement portal</a>
+      <a href="https://calendar.google.com/calendar/u/0/embed?src=c_2f58dce10e4deb5ee53e07b0634dbfed3794cb729598525edc1a3da8a2df1e34@group.calendar.google.com&ctz=Asia/Kolkata" target="_blank">Calendar</a>
+    </div>
+    <div class="nav-item">
+      <a href="https://iiitbh.pod.ai/" target="_blank">POD</a>
     </div>
   </div>
   <div class="hamburger">
